--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
-blinker
-click
-colorama
-Flask
-Flask-MySQLdb
-itsdangerous
-Jinja2
-MarkupSafe
-mysqlclient
-Werkzeug
+APScheduler==3.11.0
+blinker==1.9.0
+click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
+Flask-APScheduler==1.13.1
+Flask-Login==0.6.3
+Flask-MySQLdb==2.0.0
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mysqlclient==2.2.7
+packaging==25.0
+pillow==11.2.1
+python-dateutil==2.9.0.post0
+six==1.17.0
+tzdata==2025.2
+tzlocal==5.3.1
+Werkzeug==3.1.3
